--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.thymeleaf.cache=false
 # db 설정
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=project
+spring.datasource.username=ott_test
 spring.datasource.password=12345
 
 # sql구문 실행
