--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ com.example.movie.upload.path=upload
 
 # 서버 포트번호 변경
 # server.port=8090
+# 파일 업로드 기본 디렉터리 (절대경로 권장)
+upload.base-dir=/absolute/path/to/uploads
+
