--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
 
-com.example.movie.upload.path=upload
+com.example.movie.upload.path=uploadCREA
 
 # 서버 포트번호 변경
 # server.port=8090
