--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,14 +1,14 @@
-# OAuth2 Client 설정 (예시/더미 값)
+# OAuth2 Client 설정 
 
 # Google
-spring.security.oauth2.client.registration.google.client-id=YOUR_GOOGLE_CLIENT_ID
-spring.security.oauth2.client.registration.google.client-secret=YOUR_GOOGLE_CLIENT_SECRET
+spring.security.oauth2.client.registration.google.client-id=1052613139056-jjaisi36qojljqufg4dk1nlg37hbh6lr.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
 
 # Kakao
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
-spring.security.oauth2.client.registration.kakao.client-id=YOUR_KAKAO_CLIENT_ID
-spring.security.oauth2.client.registration.kakao.client-secret=YOUR_KAKAO_CLIENT_SECRET
+spring.security.oauth2.client.registration.kakao.client-id=4d82bc44eebc691acac7fcaf98ce26f9
+spring.security.oauth2.client.registration.kakao.client-secret=vQWaEwBVCsTABfCPwhLPVlBPcpWpUp6X
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,profile_image,account_email
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
@@ -20,8 +20,8 @@ spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.co
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
 # Naver
-spring.security.oauth2.client.registration.naver.client-id=YOUR_NAVER_CLIENT_ID
-spring.security.oauth2.client.registration.naver.client-secret=YOUR_NAVER_CLIENT_SECRET
+spring.security.oauth2.client.registration.naver.client-id=dYU2FnNfqtMG9MWlLdmp
+spring.security.oauth2.client.registration.naver.client-secret=RcG6UHQF7L
 spring.security.oauth2.client.registration.naver.client-name=Naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
