--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,13 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=ott_test
 spring.datasource.password=12345
 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+upload.base-dir=uploads
+
+
 # sql구문 실행
 spring.jpa.hibernate.ddl-auto=none
-
 # 콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
@@ -30,9 +34,3 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
 
 com.example.movie.upload.path=upload
-
-# 서버 포트번호 변경
-# server.port=8090
-# 파일 업로드 기본 디렉터리 (절대경로 권장)
-upload.base-dir=/absolute/path/to/uploads
-
