db 업로드 및 경로 이미지 저장 컨트롤러,서비스 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.datasource.password=12345
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-upload.base-dir=uploads
+upload.base-dir=C:/source/teamproject/team1-project/src/main/resources/static/images/view
+
 
 
 # sql구문 실행
@@ -34,3 +35,4 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
 
 com.example.movie.upload.path=upload
+# com.example.movie.upload.path=C:/springboot/uploads/images
