--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,11 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 # security 로그 자세히
 logging.level.org.springframework.security.web=trace
 
+logging.level.root=ERROR
+logging.level.com.example.ott=ERROR
+logging.level.org.springframework.web=ERROR
+
+
 # 파일 업로드 설정
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
