--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,7 @@ build/
 application-oauth.properties
 
 ### img 파일 무시 ###
-images/*.png
-images/*.jpg
+images/gameimages/*.png
+images/gameimages/*.jpg
+images/movieimages/*.jpg
+images/movieimages/*.png
