--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,12 @@ spring.datasource.password=12345
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-upload.base-dir=C:/source/teamproject/team1-project/src/main/resources/static/images/view
+upload.base-dir=C:/SOURCE/team1-project/src/main/resources/static/images/view
 
 
 
 # sql구문 실행
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 # 콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
@@ -29,9 +29,9 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 # security 로그 자세히
 logging.level.org.springframework.security.web=trace
 
-logging.level.root=ERROR
-logging.level.com.example.ott=ERROR
-logging.level.org.springframework.web=ERROR
+logging.level.root=INFO
+logging.level.com.example.ott=DEBUG
+logging.level.org.springframework.web=DEBUG
 
 
 # 파일 업로드 설정
@@ -41,3 +41,5 @@ spring.servlet.multipart.max-request-size=30MB
 
 com.example.movie.upload.path=upload
 # com.example.movie.upload.path=C:/springboot/uploads/images
+
+spring.profiles.include=oauth
