--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,9 +29,9 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 # security 로그 자세히
 logging.level.org.springframework.security.web=trace
 
-logging.level.root=ERROR
-logging.level.com.example.ott=ERROR
-logging.level.org.springframework.web=ERROR
+logging.level.root=INFO
+logging.level.com.example.ott=DEBUG
+logging.level.org.springframework.web=DEBUG
 
 
 # 파일 업로드 설정
@@ -41,3 +41,5 @@ spring.servlet.multipart.max-request-size=30MB
 
 com.example.movie.upload.path=upload
 # com.example.movie.upload.path=C:/springboot/uploads/images
+
+spring.profiles.include=oauth
