--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,5 @@ build/
 ### application properties 민감정보 ###
 application-oauth.properties
 
-### img 파일 무시 ###
-images/gameimages/*.png
-images/gameimages/*.jpg
-images/movieimages/*.jpg
-images/movieimages/*.png
+### imgges 내 파일 무시 ###
+src/main/resources/static/images/**
