--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,12 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=ott_test
 spring.datasource.password=12345
 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+upload.base-dir=C:/SOURCE/team1-project/src/main/resources/static/images/view
+
+
+
 # sql구문 실행
 spring.jpa.hibernate.ddl-auto=none
 
@@ -24,19 +30,17 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 # security 로그 자세히
 logging.level.org.springframework.security.web=trace
 
+logging.level.root=INFO
+logging.level.com.example.ott=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+
 # 파일 업로드 설정
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
 
-com.example.movie.upload.path=uploadCREA
+com.example.movie.upload.path=upload
+# com.example.movie.upload.path=C:/springboot/uploads/images
 
-# 서버 포트번호 변경
-# server.port=8090
-
-# oauth 설정 파일 불러오기
 spring.profiles.include=oauth
-
-# 파일 업로드 기본 디렉터리 (절대경로 권장)
-upload.base-dir=/absolute/path/to/uploads
-
