--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,5 @@ build/
 ### application properties 민감정보 ###
 application-oauth.properties
 
-### img 파일 무시 ###
-*.png
-*.jpg
+### imgges 내 파일 무시 ###
+src/main/resources/static/images/**
