security 일부 적용, 테스트 필요

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,6 @@ com.example.movie.upload.path=upload
 # com.example.movie.upload.path=C:/springboot/uploads/images
 
 spring.profiles.include=oauth
+
+# 기본 Whitelabel Error Page(흰 에러페이지) 비활성화
+# server.error.whitelabel.enabled=false
