--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ upload.base-dir=C:/SOURCE/team1-project/src/main/resources/static/images/view
 
 
 # sql구문 실행
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 
 # 콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
 spring.jpa.properties.hibernate.format_sql=true
@@ -31,8 +31,8 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 logging.level.org.springframework.security.web=trace
 
 logging.level.root=INFO
-logging.level.com.example.ott=DEBUG
-logging.level.org.springframework.web=DEBUG
+logging.level.com.example.ott=INFO
+logging.level.org.springframework.web=INFO
 
 
 # 파일 업로드 설정
@@ -41,9 +41,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
 
 com.example.movie.upload.path=upload
-# com.example.movie.upload.path=C:/springboot/uploads/images
 
 spring.profiles.include=oauth
-
-# 기본 Whitelabel Error Page(흰 에러페이지) 비활성화
-# server.error.whitelabel.enabled=false
