follow시 해당 유저의 취향에 팔로우한 콘텐츠들의 장르가 추가되는 기능 완성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ upload.base-dir=C:/SOURCE/team1-project/src/main/resources/static/images/view
 
 
 # sql구문 실행
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 # 콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
 spring.jpa.properties.hibernate.format_sql=true
