--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,13 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 upload.base-dir=C:/SOURCE/team1-project/src/main/resources/static/images/view
 
+# iframe 임베딩
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+spring.mvc.view.view-names=*.jsp
+spring.mvc.view.view-class=org.springframework.web.servlet.view.JstlView
+
+
 
 
 # sql구문 실행
