--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,12 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-
+	<!-- mysql 의존성추가 0812 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
