--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 spring.application.name=ott
 
-
 spring.thymeleaf.cache=false
 
-# db 설정
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+# db 설정 oracle
+# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+# spring.datasource.username=ott_test
+# spring.datasource.password=12345
+
+# db 설정 mysql 0812추가
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ott_test?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=ott_test
 spring.datasource.password=12345
 
@@ -19,9 +24,9 @@ spring.mvc.view.suffix=.jsp
 spring.mvc.view.view-names=*.jsp
 spring.mvc.view.view-class=org.springframework.web.servlet.view.JstlView
 
-
 # sql구문 실행
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # 콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
@@ -31,13 +36,14 @@ logging.level.org.hibernate.SQL=debug
 # ? 바인딩 자세히
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=DEBUG
+
 # security 로그 자세히
 logging.level.org.springframework.security.web=trace
 
 logging.level.root=INFO
 logging.level.com.example.ott=DEBUG
 logging.level.org.springframework.web=DEBUG
-
 
 # 파일 업로드 설정
 spring.servlet.multipart.enabled=true
