--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,35 @@
 spring.application.name=ott
 
 
+
+
+# db 설정 -- oracle
+# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+# spring.datasource.username=ott_test
+# spring.datasource.password=12345
+
+upload.base-dir=C:/SOURCE/team1-project/src/main/resources/static/images/view
+
+# thymeleaf 관련 설정
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
-# db 설정
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+# db 설정 -- MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ott_test_db?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=ott_test
 spring.datasource.password=12345
 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-upload.base-dir=C:/SOURCE/team1-project/src/main/resources/static/images/view
+# JPA 설정
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+
+# 콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight_sql=true
 
 # iframe 임베딩
 spring.mvc.view.prefix=/WEB-INF/views/
@@ -20,11 +38,7 @@ spring.mvc.view.view-names=*.jsp
 spring.mvc.view.view-class=org.springframework.web.servlet.view.JstlView
 
 
-# sql구문 실행
-spring.jpa.hibernate.ddl-auto=none
-# 콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.highlight_sql=true
+
 
 # 로그 자세히
 logging.level.org.hibernate.SQL=debug
