--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.thymeleaf.cache=false
 
 # db 설정 -- MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ott_test_db?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ott_test?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=ott_test
 spring.datasource.password=12345
 
