콘텐츠 페이지 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=ott
 # spring.datasource.username=ott_test
 # spring.datasource.password=12345
 
-upload.base-dir=C:/SOURCE/team1-project/src/main/resources/static/images/view
+upload.base-dir=./src/main/resources/static/images/view
 
 # thymeleaf 관련 설정
 spring.thymeleaf.prefix=classpath:/templates/
