--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,11 @@
 		</dependency>
 
 		<!-- aud7-embedded.jar --> 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.matrix</groupId>
 			<artifactId>aud7-embedded</artifactId>
 			<version>1.0.0</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
