--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=ott
 # spring.datasource.username=ott_test
 # spring.datasource.password=12345
 
-upload.base-dir=./src/main/resources/static/images/view
+
 
 # thymeleaf 관련 설정
 spring.thymeleaf.prefix=classpath:/templates/
@@ -41,7 +41,7 @@ spring.mvc.view.view-class=org.springframework.web.servlet.view.JstlView
 
 
 # 로그 자세히
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=DEBUG
 # ? 바인딩 자세히
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
@@ -50,15 +50,17 @@ logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappi
 # security 로그 자세히
 logging.level.org.springframework.security.web=trace
 
+logging.level.com.example.ott=TRACE
 logging.level.root=INFO
-logging.level.com.example.ott=DEBUG
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.servlet.resource=DEBUG
+logging.level.org.springframework.security=DEBUG
+
 
 # 파일 업로드 설정
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
-
+upload.base-dir=./src/main/resources/static/images/view
 com.example.movie.upload.path=upload
 # com.example.movie.upload.path=C:/springboot/uploads/images
 
@@ -66,3 +68,4 @@ spring.profiles.include=oauth
 
 # 기본 Whitelabel Error Page(흰 에러페이지) 비활성화
 # server.error.whitelabel.enabled=false
+
