--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/
 !**/src/test/**/target/
 
 
+
 # Add any directories, files, or patterns you don't want to be tracked by version control
 node_modules/
 .DS_Store
@@ -46,3 +47,4 @@ application-oauth.properties
 ### imgges 내 파일 무시 ###
 src/main/resources/static/images/**
 src/main/resources/static/upload/**
+!src/main/resources/static/images/homepage/**
