--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,24 @@
+# =========================
+# 공통 설정 (모든 환경)
+# =========================
+
+# spring.profiles.active=docker
+
+# 프로파일 공통
+spring.profiles.include=oauth
+
 spring.application.name=ott
-
 spring.thymeleaf.cache=false
-
-# db 설정 oracle
-# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-# spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-# spring.datasource.username=ott_test
-# spring.datasource.password=12345
-
-# db 설정 mysql 0812추가
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ott_test?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=ott_test
-spring.datasource.password=12345
-
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-upload.base-dir=C:/SOURCE/team1-project/src/main/resources/static/images/view
+
+# 파일 업로드 공통 설정
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=30MB
+com.example.movie.upload.path=upload
+
+spring.jpa.hibernate.ddl-auto=update
 
 # iframe 임베딩
 spring.mvc.view.prefix=/WEB-INF/views/
@@ -24,36 +26,19 @@ spring.mvc.view.suffix=.jsp
 spring.mvc.view.view-names=*.jsp
 spring.mvc.view.view-class=org.springframework.web.servlet.view.JstlView
 
-# sql구문 실행
-spring.jpa.hibernate.ddl-auto=none
+# SQL / JPA 공통 설정
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-# 콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
 
-# 로그 자세히
-logging.level.org.hibernate.SQL=debug
-# ? 바인딩 자세히
-logging.level.org.hibernate.orm.jdbc.bind=trace
 
-logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=DEBUG
-
-# security 로그 자세히
-logging.level.org.springframework.security.web=trace
-
+# 로깅 공통
 logging.level.root=INFO
 logging.level.com.example.ott=DEBUG
 logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=DEBUG
+logging.level.org.springframework.security.web=trace
 
-# 파일 업로드 설정
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=30MB
 
-com.example.movie.upload.path=upload
-# com.example.movie.upload.path=C:/springboot/uploads/images
-
-spring.profiles.include=oauth
-
-# 기본 Whitelabel Error Page(흰 에러페이지) 비활성화
-# server.error.whitelabel.enabled=false
