--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # 공통 설정 (모든 환경)
 # =========================
 
-# spring.profiles.active=docker
+spring.profiles.active=local
 
 # 프로파일 공통
 spring.profiles.include=oauth
@@ -18,7 +18,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
 com.example.movie.upload.path=upload
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # iframe 임베딩
 spring.mvc.view.prefix=/WEB-INF/views/
