--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
 com.example.movie.upload.path=upload
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 
 # iframe 임베딩
 spring.mvc.view.prefix=/WEB-INF/views/
@@ -42,3 +42,4 @@ logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappi
 logging.level.org.springframework.security.web=trace
 
 
+upload.base-dir=./src/main/resources/static/images/view
