--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,45 +1,33 @@
 # =========================
-# 공통 설정 (모든 환경)
+# 공통
 # =========================
-
-spring.profiles.active=local
-
-# 프로파일 공통
 spring.profiles.include=oauth
-
 spring.application.name=ott
-spring.thymeleaf.cache=false
+
+spring.thymeleaf.cache=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-# 파일 업로드 공통 설정
+# 파일 업로드
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
-com.example.movie.upload.path=upload
+upload.base-dir=/var/lib/ott/static/images/view
 
-spring.jpa.hibernate.ddl-auto=create
+# DB (하드코딩)
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ott_test?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8
+spring.datasource.username=ott_test
+spring.datasource.password=12345
 
-# iframe 임베딩
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-spring.mvc.view.view-names=*.jsp
-spring.mvc.view.view-class=org.springframework.web.servlet.view.JstlView
-
-# SQL / JPA 공통 설정
+# JPA
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.highlight_sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.highlight_sql=false
 
-
-# 로깅 공통
+# 로깅 (운영 최소 수준)
 logging.level.root=INFO
-logging.level.com.example.ott=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.orm.jdbc.bind=trace
-logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=DEBUG
-logging.level.org.springframework.security.web=trace
-
-
-upload.base-dir=./src/main/resources/static/images/view
+logging.level.com.example.ott=INFO
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=INFO
